--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
         "symfony/runtime": "7.0.*",
+        "symfony/security-bundle": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
         "symfony/yaml": "7.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
@@ -75,6 +76,7 @@
         "phpunit/phpunit": "^3.7",
         "symfony/browser-kit": "7.0.*",
         "symfony/css-selector": "7.0.*",
+        "symfony/maker-bundle": "^1.57",
         "symfony/phpunit-bridge": "^3.2",
         "vimeo/psalm": "^5.23"
     }
