--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
   "presets": [
     "@babel/preset-env"
-  ]
+  ],
+  // Babel >= 7.13.0 (https://babeljs.io/docs/en/assumptions)
+  "plugins": [["@babel/plugin-proposal-class-properties"]],
+  "assumptions": {
+      "setPublicClassFields": false
+  }
 }
   
