Add invitation panel and related components for user profile

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,6 +33,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        # Allow access to the registration route and all its subroutes for everyone
+        - { path: ^/registration(/.*)?$, roles: PUBLIC_ACCESS }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/login, roles: PUBLIC_ACCESS }
