--- a/composer.json
+++ b/composer.json
@@ -78,11 +78,12 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^3.7",
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-doctrine": "^2.0",
+        "phpunit/phpunit": "^9",
         "symfony/browser-kit": "7.0.*",
         "symfony/css-selector": "7.0.*",
         "symfony/maker-bundle": "^1.57",
-        "symfony/phpunit-bridge": "^3.2",
-        "vimeo/psalm": "^5.23"
+        "symfony/phpunit-bridge": "^7.2"
     }
 }
