--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,7 +26,7 @@ security:
                 login_path: app_login
                 check_path: app_login
             json_login:
-                check_path: api_login
+                check_path: api_v1_login
             logout:
                 path: /logout
                 
@@ -37,7 +37,7 @@ security:
         - { path: ^/registration(/.*)?$, roles: PUBLIC_ACCESS }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api/v1/login, roles: PUBLIC_ACCESS }
         - { path: ^/$, roles: PUBLIC_ACCESS }
         - { path: ^/*, roles: IS_AUTHENTICATED_FULLY }
 
