--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mobx": "^6.12.1",
     "mobx-react": "^9.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.85.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.3",
@@ -34,7 +35,6 @@
     "css-loader": "^6.10.0",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.8.1",
-    "node-sass": "^8.0.0",
     "sass-loader": "^13.3.3",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
