--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "mobx": "^6.12.1",
     "mobx-react": "^9.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass": "^1.85.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.3",
@@ -35,7 +34,8 @@
     "css-loader": "^6.10.0",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.8.1",
-    "sass-loader": "^13.3.3",
+    "sass": "^1.62.1",
+    "sass-loader": "^16.0.5",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
     "typescript": "^4.9.5",
